# auto_daily_stand-up_meeting

./: .gitignore  Cargo.toml  DATABASE_SETUP.md  README.md  deploy.sh  schema.sql  wrangler.toml
src/: ai.rs  ai_client.rs  api.rs  database.rs  feishu_webhook.rs  github_api.rs  lib.rs  main.rs
