[package]
name = "auto-daily-standup-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.4.0"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
regex = "1.10"
anyhow = "1.0"
futures = "0.3"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
